Source/ISS/Development/CommonInterfaceControlLayer/Cicl_Devices/AtxmlLE1553_5/Vendor/Include/BTI429NET.VB

        Public Declare Sub BTI429_GetChanCount Lib "BTI429.DLL" Alias "_BTI429_GetChanCount@12" (ByRef rcvcount As Int32, ByRef xmtcount As Int32, ByVal handleval As IntPtr)
        Public Declare Function BTI429_IsChan Lib "BTI429.DLL" Alias "_BTI429_IsChan@8" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_IsRcvChan Lib "BTI429.DLL" Alias "_BTI429_IsRcvChan@8" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_IsXmtChan Lib "BTI429.DLL" Alias "_BTI429_IsXmtChan@8" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_LabelReverse Lib "BTI429.DLL" Alias "_BTI429_LabelReverse@4" (ByVal msgval As UInt32) As UInt32
        Public Declare Function BTI429_ListAddr Lib "BTI429.DLL" Alias "_BTI429_ListAddr@12" (ByVal index As Int32, ByVal listaddr As UInt32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTI429_ListAddrEx Lib "BTI429.DLL" Alias "_BTI429_ListAddrEx@16" (ByVal index As Int32, ByVal listaddr As UInt32, ByRef header As UInt16, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTI429_ListAdvance Lib "BTI429.DLL" Alias "_BTI429_ListAdvance@8" (ByVal listaddr As UInt32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_ListClear Lib "BTI429.DLL" Alias "_BTI429_ListClear@8" (ByVal listaddr As UInt32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_ListConfig Lib "BTI429.DLL" Alias "_BTI429_ListConfig@12" (ByVal configval As UInt32, ByVal count As Int32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTI429_ListConfigEx Lib "BTI429.DLL" Alias "_BTI429_ListConfigEx@12" (ByVal configval As UInt32, ByVal count As Int32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTI429_ListDataBlkRd Lib "BTI429.DLL" Alias "_BTI429_ListDataBlkRd@16" (ByVal dataptr As UInt32(), ByRef datacountptr As UInt16, ByVal listaddr As UInt32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_ListDataBlkWr Lib "BTI429.DLL" Alias "_BTI429_ListDataBlkWr@16" (ByVal dataptr As UInt32(), ByVal datacount As UInt16, ByVal listaddr As UInt32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_ListDataRdEx Lib "BTI429.DLL" Alias "_BTI429_ListDataRdEx@12" (ByVal index As Int32, ByVal listaddr As UInt32, ByVal handleval As IntPtr) As UInt32
        Public Declare Sub BTI429_ListDataWrEx Lib "BTI429.DLL" Alias "_BTI429_ListDataWrEx@16" (ByVal value As UInt32, ByVal index As Int32, ByVal listaddr As UInt32, ByVal handleval As IntPtr)
        Public Declare Function BTI429_ListInit Lib "BTI429.DLL" Alias "_BTI429_ListInit@12" (ByVal listaddr As UInt32, ByVal msgaddr As UInt32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_ListNextRd Lib "BTI429.DLL" Alias "_BTI429_ListNextRd@12" (ByVal listaddr As UInt32, ByRef header As UInt16, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTI429_ListNextWr Lib "BTI429.DLL" Alias "_BTI429_ListNextWr@12" (ByVal listaddr As UInt32, ByRef header As UInt16, ByVal handleval As IntPtr) As UInt32
        Public Declare Sub BTI429_ListPostRd Lib "BTI429.DLL" Alias "_BTI429_ListPostRd@12" (ByVal listaddr As UInt32, ByRef header As UInt16, ByVal handleval As IntPtr)
        Public Declare Sub BTI429_ListPostWr Lib "BTI429.DLL" Alias "_BTI429_ListPostWr@12" (ByVal listaddr As UInt32, ByRef header As UInt16, ByVal handleval As IntPtr)
        Public Declare Sub BTI429_ListPreRd Lib "BTI429.DLL" Alias "_BTI429_ListPreRd@12" (ByVal listaddr As UInt32, ByRef header As UInt16, ByVal handleval As IntPtr)
        Public Declare Sub BTI429_ListPreWr Lib "BTI429.DLL" Alias "_BTI429_ListPreWr@12" (ByVal listaddr As UInt32, ByRef header As UInt16, ByVal handleval As IntPtr)
        Public Declare Function BTI429_MsgActivityRd Lib "BTI429.DLL" Alias "_BTI429_MsgActivityRd@8" (ByVal msgaddr As UInt32, ByVal handleval As IntPtr) As UInt16
        Public Declare Sub BTI429_MsgActivityWr Lib "BTI429.DLL" Alias "_BTI429_MsgActivityWr@12" (ByVal value As UInt16, ByVal msgaddr As UInt32, ByVal handleval As IntPtr)
        Public Declare Function BTI429_MsgCheck Lib "BTI429.DLL" Alias "_BTI429_MsgCheck@8" (ByVal msgaddr As UInt32, ByVal handleval As IntPtr) As UInt16
        Public Declare Function BTI429_MsgCommRd Lib "BTI429.DLL" Alias "_BTI429_MsgCommRd@12" (ByRef msgfields As MSGFIELDS429, ByVal msgaddr As UInt32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTI429_MsgCommWr Lib "BTI429.DLL" Alias "_BTI429_MsgCommWr@12" (ByRef msgfields As MSGFIELDS429, ByVal msgaddr As UInt32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTI429_MsgConfig Lib "BTI429.DLL" Alias "_BTI429_MsgConfig@12" (ByVal configval As UInt32, ByVal msgaddr As UInt32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_MsgMultiSkipWr Lib "BTI429.DLL" Alias "_BTI429_MsgMultiSkipWr@16" (ByVal skip As Int32(), ByVal msgaddr As UInt32(), ByVal msgcount As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_MsgOptRd Lib "BTI429.DLL" Alias "_BTI429_MsgOptRd@8" (ByVal msgaddr As UInt32, ByVal handleval As IntPtr) As UInt16
        Public Declare Sub BTI429_MsgOptWr Lib "BTI429.DLL" Alias "_BTI429_MsgOptWr@12" (ByVal msgopt As UInt16, ByVal msgaddr As UInt32, ByVal handleval As IntPtr)
        Public Declare Function BTI429_MsgReset Lib "BTI429.DLL" Alias "_BTI429_MsgReset@8" (ByVal msgaddr As UInt32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTI429_ParamWaveformConfig Lib "BTI429.DLL" Alias "_BTI429_ParamWaveformConfig@24" (ByVal configval As UInt32, ByVal highvolt As Int32, ByVal lowvolt As Int32, ByVal nullvolt As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_ParamWaveformConfigEx Lib "BTI429.DLL" Alias "_BTI429_ParamWaveformConfigEx@16" (ByVal configval As UInt32, ByRef paramflds As PARAMFIELDS429, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_Sched1Build Lib "BTI429.DLL" Alias "_BTI429_Sched1Build@44" (ByVal basevalmsgnum As Int32, ByVal nummsgs As Int32, ByVal msgaddr As UInt32(), ByVal minperiodin As Int32(), ByVal maxperiodin As Int32(), ByVal speed As Int32, ByVal microflag As Int32, ByVal debugvalflag As Int32, ByVal interceptflag As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_Sched2AdvanceMessage Lib "BTI429.DLL" Alias "_BTI429_Sched2AdvanceMessage@48" (ByVal entries As Int32, ByVal panicindex As Int32, ByVal nummsgs As Int32, ByVal infoptr As IntPtr, ByRef nextdeltaptr As Int32, ByVal ulmastertimer As Int32, ByRef msgaddrptr As UInt32, ByVal debugvalflag As Int32, ByVal tryflag As Int32, ByVal interceptflag As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_Sched2AdvanceNoMessage Lib "BTI429.DLL" Alias "_BTI429_Sched2AdvanceNoMessage@40" (ByVal nummsgs As Int32, ByVal infoptr As IntPtr, ByRef nextdeltaptr As Int32, ByVal ulmastertimer As Int32, ByRef msgaddrptr As UInt32, ByVal debugvalflag As Int32, ByVal tryflag As Int32, ByVal interceptflag As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Sub BTI429_Sched2Analyze Lib "BTI429.DLL" Alias "_BTI429_Sched2Analyze@8" (ByVal nummsgs As Int32, ByVal infoptr As IntPtr)
        Public Declare Function BTI429_Sched2Build Lib "BTI429.DLL" Alias "_BTI429_Sched2Build@40" (ByVal nummsgs As Int32, ByVal msgaddrptr As UInt32(), ByVal minlist As Int32(), ByVal maxlist As Int32(), ByVal speedflag As Int32, ByVal microflag As Int32, ByVal debugvalflag As Int32, ByVal interceptflag As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_Sched2BuildEx Lib "BTI429.DLL" Alias "_BTI429_Sched2BuildEx@28" (ByRef styleptr As Int32, ByVal nummsgs As Int32, ByVal minlist As Int32(), ByVal maxlist As Int32(), ByVal speedflag As Int32, ByVal microflag As Int32, ByVal interceptflag As Int32) As Int32
        Public Declare Function BTI429_Sched2BuildExx Lib "BTI429.DLL" Alias "_BTI429_Sched2BuildExx@60" (ByVal style As Int32, ByVal speedflag As Int32, ByVal microflag As Int32, ByVal debugvalflag As Int32, ByVal tryflag As Int32, ByVal nummsgs As Int32, ByVal minlist As Int32(), ByVal maxlist As Int32(), ByRef entriesptr As Int32, ByRef maxentriesptr As Int32, ByVal infoptr As IntPtr, ByVal msgaddrptr As UInt32(), ByVal interceptflag As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_Sched3Build Lib "BTI429.DLL" Alias "_BTI429_Sched3Build@40" (ByVal nummsgs As Int32, ByVal msgaddr As UInt32(), ByVal minperiod As Int32(), ByVal maxperiod As Int32(), ByVal speed As Int32, ByVal microflag As Int32, ByVal debugvalflag As Int32, ByVal interceptflag As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_Sched3BuildEx Lib "BTI429.DLL" Alias "_BTI429_Sched3BuildEx@44" (ByVal basevalmsgnum As Int32, ByVal nummsgs As Int32, ByVal msgaddr As UInt32(), ByVal minperiodin As Int32(), ByVal maxperiodin As Int32(), ByVal speed As Int32, ByVal microflag As Int32, ByVal debugvalflag As Int32, ByVal interceptflag As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_Sched3Calc Lib "BTI429.DLL" Alias "_BTI429_Sched3Calc@4" (ByVal infoptr As IntPtr) As UInt32
        Public Declare Function BTI429_Sched3Check Lib "BTI429.DLL" Alias "_BTI429_Sched3Check@12" (ByRef minperiod As Int32, ByRef maxperiod As Int32, ByVal infoptr As IntPtr) As Int32
        Public Declare Function BTI429_Sched3ToBit Lib "BTI429.DLL" Alias "_BTI429_Sched3ToBit@8" (ByVal value As UInt32, ByVal infoptr As IntPtr) As UInt32
        Public Declare Function BTI429_Sched4AdvanceMessage Lib "BTI429.DLL" Alias "_BTI429_Sched4AdvanceMessage@48" (ByVal entries As Int32, ByVal panicindex As Int32, ByVal nummsgs As Int32, ByVal infoptr As IntPtr, ByRef nextdeltaptr As Int32, ByVal ulmastertimer As Int32, ByRef msgaddrptr As UInt32, ByVal debugvalflag As Int32, ByVal tryflag As Int32, ByVal interceptflag As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_Sched4AdvanceNoMessage Lib "BTI429.DLL" Alias "_BTI429_Sched4AdvanceNoMessage@40" (ByVal nummsgs As Int32, ByVal infoptr As IntPtr, ByRef nextdeltaptr As Int32, ByVal ulmastertimer As Int32, ByRef msgaddrptr As UInt32, ByVal debugvalflag As Int32, ByVal tryflag As Int32, ByVal interceptflag As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Sub BTI429_Sched4Analyze Lib "BTI429.DLL" Alias "_BTI429_Sched4Analyze@8" (ByVal nummsgs As Int32, ByVal infoptr As IntPtr)
        Public Declare Function BTI429_Sched4Build Lib "BTI429.DLL" Alias "_BTI429_Sched4Build@40" (ByVal nummsgs As Int32, ByVal msgaddrptr As UInt32(), ByVal minlist As Int32(), ByVal maxlist As Int32(), ByVal speedflag As Int32, ByVal microflag As Int32, ByVal debugvalflag As Int32, ByVal interceptflag As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_Sched4BuildEx Lib "BTI429.DLL" Alias "_BTI429_Sched4BuildEx@40" (ByRef styleptr As Int32, ByVal nummsgs As Int32, ByVal minorframetime As Int32, ByVal majorframetime As Int32, ByVal targetlist As Int32(), ByVal minlist As Int32(), ByVal maxlist As Int32(), ByVal speedflag As Int32, ByVal microflag As Int32, ByVal interceptflag As Int32) As Int32
